--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,3 @@
-{% extends "_layout.html" %}
+{% extends "_layout.html" %} {% block content %}
 <h1>Homepage</h1>
-{% block content %} {% endblock %}
+{% endblock %}
