--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
-{% extends "_layout.html" %} {% block content %}
+{% extends "_layout.html" %} 
+{% block content %}
 <h1>Homepage</h1>
 {% endblock %}
