Add create warehouse

--- a/templates/store.html
+++ b/templates/store.html
@@ -12,7 +12,7 @@
 <div class="mt-3">
   <h1>Store</h1>
 </div>
-<form action="{{ url_for('create') }}">
+<form action="{{ url_for('create_store') }}" method="POST">
   <div class="form-group">
     <label for="store_name">Add a store</label>
     <input
