--- a/templates/store.html
+++ b/templates/store.html
@@ -5,9 +5,13 @@
 {% with messages = get_flashed_messages(with_categories=true) %} {% if messages %} 
 
 {% for category, message in messages %}
-<div class="mt-3 alert alert-{{ category }}">{{ message }}</div>
+    <div class="mt-3 alert alert-{{ category }}">{{ message }}</div>
 
 {% endfor %} {% endif %} {% endwith %}
+
+{% for errors in error if error|length > 0 %}
+    <div class="mt-3 alert alert-danger">{{ errors }}</div>    
+{% endfor %}
 
 <div class="mt-3">
   <h1>Store</h1>
